Bug 162879 - The filter dialog doesn't apply the selected filter
Summary: The filter dialog doesn't apply the selected filter
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Filters (other bugs)
Version First Reported In: git master (please specify the git hash!)
Platform: Unlisted Binaries Linux
: NOR normal
Target Milestone: ---
Assignee: Krita Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2008-05-30 11:41 UTC by Cyrille Berger
Modified: 2008-06-03 22:55 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Cyrille Berger 2008-05-30 11:41:16 UTC
The filter dialog allows to select a different filters than the filter that was 
first selected in the menu, but it allways applies the first selected filter.
Comment 1 Cyrille Berger 2008-06-03 22:55:48 UTC
SVN commit 816433 by berger:

apply the filter selected by the dialog, not the one use to launch the dialog

BUG:162879

 M  +12 -9     kis_filter_handler.cc  


WebSVN link: http://websvn.kde.org/?view=rev&revision=816433