apply the filter selected by the dialog, not the one use to launch the dialog

BUG:162879

svn path=/trunk/koffice/; revision=816433